Fixing floating image issues and removing spacing between divs

--- a/bucketlist/css/q4.css
+++ b/bucketlist/css/q4.css
@@ -10,14 +10,9 @@
     padding-bottom: 15px;
 }
 
-#event18 {
-    padding-bottom: 3em;
-}
-
 #event18 #pic1 {
     width: 30%;
     float: right;
-    padding-bottom: 3em;
 }
 
 #event18 #pic2 {
